--- a/.github/workflows/DW33d.yml
+++ b/.github/workflows/DW33d.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   REPO_URL: https://github.com/fsdgvvh/openwertx
-  REPO_BRANCH: master
+  REPO_BRANCH: 23.05
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/DW33d.config
   DIY_P1_SH: diy-part1.sh
