--- a/.github/workflows/DW33d.yml
+++ b/.github/workflows/DW33d.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/fsdgvvh/openwertx.git
-  REPO_BRANCH: 23.05
+  REPO_URL: https://github.com/fsdgvvh/openwertym.git
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/DW33d.config
   DIY_P1_SH: diy-part1.sh
